VisualforcePage1/src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RAJ</fullName>
                </value>
                <value>
                    <fullName>CBSE</fullName>
                </value>
                <value>
                    <fullName>BIHAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClassTeacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClassTeacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DetailedDescription__c</fullName>
        <label>DetailedDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxSize__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MaxSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyCount__c</fullName>
        <label>MyCount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfStudents__c</fullName>
        <label>NumberOfStudents</label>
        <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ClassTeacher__c</columns>
        <columns>MaxSize__c</columns>
        <columns>MyCount__c</columns>
        <columns>NumberOfStudents__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>